website/src/content/v9/pages/api/options.mdx
export const metadata = {
  title: 'Options',
  description: `Learn how to configure and fine-tune Embla Carousel using its rich set of customization options.`,
  order: 10
}

import { TABS_LIBRARY } from '@/utils/tabs'
import { stringifyAsJs } from '@/utils/prism'
import { defaultOptions } from '@packages/embla-carousel/src/components/Options'

import constructorOptions_module_01 from '@/content/v9/code-snippets/api/options/constructor-options-vanilla-01.js'
import constructorOptions_html_01 from '@/content/v9/code-snippets/api/options/constructor-options-vanilla-01.html'
import constructorOptions_react_01 from '@/content/v9/code-snippets/api/options/constructor-options-react-01.jsx'
import constructorOptions_vue_01 from '@/content/v9/code-snippets/api/options/constructor-options-vue-01.vue'
import constructorOptions_solid_01 from '@/content/v9/code-snippets/api/options/constructor-options-solid-01.jsx'
import constructorOptions_svelte_01 from '@/content/v9/code-snippets/api/options/constructor-options-svelte-01.svelte'
import globalOptions_module_01 from '@/content/v9/code-snippets/api/options/global-options-vanilla-01.js'
import globalOptions_react_01 from '@/content/v9/code-snippets/api/options/global-options-react-01.jsx'
import globalOptions_vue_01 from '@/content/v9/code-snippets/api/options/global-options-vue-01.vue'
import globalOptions_solid_01 from '@/content/v9/code-snippets/api/options/global-options-solid-01.jsx'
import globalOptions_svelte_01 from '@/content/v9/code-snippets/api/options/global-options-svelte-01.svelte'
import changingOptions_module_01 from '@/content/v9/code-snippets/api/options/changing-options-vanilla-01.js'
import changingOptions_react_01 from '@/content/v9/code-snippets/api/options/changing-options-react-01.jsx'
import changingOptions_vue_01 from '@/content/v9/code-snippets/api/options/changing-options-vue-01.vue'
import changingOptions_solid_01 from '@/content/v9/code-snippets/api/options/changing-options-solid-01.jsx'
import changingOptions_svelte_01 from '@/content/v9/code-snippets/api/options/changing-options-svelte-01.svelte'
import typeScriptOptions_module_01 from '@/content/v9/code-snippets/api/options/typescript-options-vanilla-01.ts'
import typeScriptOptions_react_01 from '@/content/v9/code-snippets/api/options/typescript-options-react-01.tsx'
import typeScriptOptions_vue_01 from '@/content/v9/code-snippets/api/options/typescript-options-vue-01.vue'
import typeScriptOptions_solid_01 from '@/content/v9/code-snippets/api/options/typescript-options-solid-01.tsx'
import typeScriptOptions_svelte_01 from '@/content/v9/code-snippets/api/options/typescript-options-svelte-01.svelte'

# Options

Embla Carousel provides a range of configuration **options** that let you control its behavior.

---

## Usage

Options can be set via the [`constructor`](#constructor-options) or as [`global defaults`](#global-options). If both are present, they're merged, and the **constructor options** override any conflicting **global options**.

### Default options

Here's a list of all available options and their **default** values:

<PrismHighlight
  language="js"
  hideLabel
  code={`const defaultOptions = ${stringifyAsJs(defaultOptions)}`}
/>

### Constructor options

The **constructor options** are the primary way to configure Embla Carousel. In the example below, the [`loop`](#loop) option is set to `true`:

<Tabs groupId={TABS_LIBRARY.GROUP_ID}>
  <TabsItem tab={TABS_LIBRARY.TABS.VANILLA}>
    <PrismHighlight
      language="js"
      code={constructorOptions_module_01}
      highlight="6"
    />
    <PrismHighlight language="html" code={constructorOptions_html_01} />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.REACT}>
    <PrismHighlight
      language="jsx"
      code={constructorOptions_react_01}
      highlight="5"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.VUE}>
    <PrismHighlight
      language="html"
      code={constructorOptions_vue_01}
      highlight="4"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SOLID}>
    <PrismHighlight
      language="jsx"
      code={constructorOptions_solid_01}
      highlight="4"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SVELTE}>
    <PrismHighlight
      language="svelte"
      code={constructorOptions_svelte_01}
      highlight="4,8"
    />
  </TabsItem>
</Tabs>

### Global options

Setting **global options** applies them to **all carousels**, overriding Embla's default options with your own. In the example below, the [`loop`](#loop) option is set to `true`:

<Tabs groupId={TABS_LIBRARY.GROUP_ID}>
  <TabsItem tab={TABS_LIBRARY.TABS.VANILLA}>
    <PrismHighlight
      language="js"
      code={globalOptions_module_01}
      highlight="3"
    />
    <PrismHighlight language="html" code={constructorOptions_html_01} />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.REACT}>
    <PrismHighlight
      language="jsx"
      code={globalOptions_react_01}
      highlight="4"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.VUE}>
    <PrismHighlight language="html" code={globalOptions_vue_01} highlight="4" />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SOLID}>
    <PrismHighlight
      language="jsx"
      code={globalOptions_solid_01}
      highlight="3"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SVELTE}>
    <PrismHighlight
      language="svelte"
      code={globalOptions_svelte_01}
      highlight="4"
    />
  </TabsItem>
</Tabs>

<Admonition type="warning">
  Assign global options **before** initializing any carousel and **only once**.
  Re-assigning them can lead to confusing code and unexpected behavior.
</Admonition>

### Changing options

It's possible to **update the options** passed to the Embla Carousel constructor **after initialization** using the [`reInit`](/docs/api/methods/#reinit) method.

In the [React](/docs/get-started/react), [Vue](/docs/get-started/vue), [Solid](/docs/get-started/solid), and [Svelte](/docs/get-started/svelte) wrappers, you can provide **reactive options**, and the carousel will automatically reinitialize whenever they change.
Here are some examples:

<Tabs groupId={TABS_LIBRARY.GROUP_ID}>
  <TabsItem tab={TABS_LIBRARY.TABS.VANILLA}>
    <PrismHighlight
      language="js"
      code={changingOptions_module_01}
      highlight="6,10-11"
    />
    <PrismHighlight language="html" code={constructorOptions_html_01} />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.REACT}>
    <PrismHighlight
      language="jsx"
      code={changingOptions_react_01}
      highlight="5,9-12"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.VUE}>
    <PrismHighlight
      language="html"
      code={changingOptions_vue_01}
      highlight="5,9-12"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SOLID}>
    <PrismHighlight
      language="jsx"
      code={changingOptions_solid_01}
      highlight="5,9-12"
    />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SVELTE}>
    <PrismHighlight
      language="svelte"
      code={changingOptions_svelte_01}
      highlight="4,7-10"
    />
  </TabsItem>
</Tabs>

### TypeScript

The `EmblaOptionsType` comes directly from the **core package** `embla-carousel` and can be used as follows:

<Tabs groupId={TABS_LIBRARY.GROUP_ID}>
  <TabsItem tab={TABS_LIBRARY.TABS.VANILLA}>
    <PrismHighlight
      language="js"
      asLanguage="ts"
      code={typeScriptOptions_module_01}
      highlight="1,6"
    />
    <PrismHighlight language="html" code={constructorOptions_html_01} />
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.REACT}>
    <PrismHighlight
      language="tsx"
      code={typeScriptOptions_react_01}
      highlight="2,6"
    />
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-react` has `embla-carousel` as
      a dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.VUE}>
    <PrismHighlight
      language="html"
      code={typeScriptOptions_vue_01}
      highlight="3,6"
    />
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-vue` has `embla-carousel` as a
      dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SOLID}>
    <PrismHighlight
      language="tsx"
      code={typeScriptOptions_solid_01}
      highlight="2,6"
    />
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-solid` has `embla-carousel` as
      a dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
  <TabsItem tab={TABS_LIBRARY.TABS.SVELTE}>
    <PrismHighlight
      language="svelte"
      code={typeScriptOptions_svelte_01}
      highlight="2,5"
    />
    <Admonition type="warning">
      If you're using `pnpm`, you need to install `embla-carousel` as a
      **devDependency** when importing types from it like demonstrated above.
      <br />
      This is because even though `embla-carousel-svelte` has `embla-carousel`
      as a dependency, `pnpm` makes nested dependencies inaccessible by design.
    </Admonition>
  </TabsItem>
</Tabs>

## Reference

Below follows an exhaustive **list of all** Embla Carousel **options** and their default values.

---

### active

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'true']} />
<PrismHighlight language="ts" hideLabel code={`{ active: false | true }`} />

Setting this to `false` will not activate or deactivate the carousel. Useful when used together with the [`breakpoints`](#breakpoints) option to toggle the carousel active/inactive depending on media queries.

---

### align

<ApiMetaData
  firstRow={['Type', 'string | function']}
  secondRow={['Default', 'center']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ align: 'start' | 'center' | 'end' | (viewSize, snapSize, index) => 40 }`}
/>

Align the slides relative to the carousel viewport. Use one of the predefined alignments `start`, `center` or `end`. Alternatively, provide your own callback to fully customize the alignment.

---

### axis

<ApiMetaData firstRow={['Type', 'string']} secondRow={['Default', 'x']} />
<PrismHighlight language="ts" hideLabel code={`{ axis: 'x' | 'y' }`} />

Choose scroll axis between `x` and `y`. Remember to stack your slides horizontally or vertically using CSS to match this option.

---

### breakpoints

<ApiMetaData
  firstRow={['Type', 'EmblaOptionsType']}
  secondRow={['Default', '{}']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ 
    loop: true,
    '(min-width: 768px)': { loop: false }
}`}
/>

An object with options that will be applied for a given breakpoint by overriding the options at the root level.

To honor [prefers-reduced-motion](https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/At-rules/@media/prefers-reduced-motion) user settings, a breakpoint media query entry can be added to disable animations: `'(prefers-reduced-motion: reduce)': { duration: 0 }`.

<Admonition type="note">
  **Note:** If multiple queries match, they will be merged. And when breakpoint
  options clash, the last one in the list has precedence.
</Admonition>

---

### container

<ApiMetaData
  firstRow={['Type', 'string | HTMLElement | null']}
  secondRow={['Default', 'null']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ container: '.embla__container' | document.querySelector('.embla__container') }`}
/>

Enables choosing a custom container element which holds the slides. By **default**, Embla will choose the **first direct child element** of the **root element**. Provide either a valid `CSS selector string` or a `HTML element`.

---

### containScroll

<ApiMetaData
  firstRow={['Type', 'false | string']}
  secondRow={['Default', 'trimSnaps']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ containScroll: false | 'trimSnaps' | 'keepSnaps' }`}
/>

Clear leading and trailing empty space that causes excessive scrolling. Use `trimSnaps` to only use snap points that trigger scrolling or `keepSnaps` to keep them.

<Admonition type="note">
  **Note:** When this is active, it will **override alignments** applied by the
  [`align`](#align) option for enough slides at the **start** and the **end** of
  the carousel, in order to **cover** the **leading** and **trailing space**.
</Admonition>

---

### direction

<ApiMetaData firstRow={['Type', 'string']} secondRow={['Default', 'ltr']} />
<PrismHighlight language="ts" hideLabel code={`{ direction: 'ltr' | 'rtl' }`} />

Choose content direction between `ltr` and `rtl`.

<Admonition type="note">
  **Note:** When using `rtl`, the content direction also has to be set to RTL
  using the [HTML dir
  attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/dir).
</Admonition>

---

### dragFree

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'false']} />
<PrismHighlight language="ts" hideLabel code={`{ dragFree: true | false }`} />

Enables momentum scrolling. The duration of the continued scrolling is proportional to how vigorous the drag gesture is.

---

### draggable

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'true']} />
<PrismHighlight language="ts" hideLabel code={`{ draggable: true | false }`} />

Enables for scrolling the carousel with mouse and touch interactions. Set this to `false` to disable drag events.

---

### dragThreshold

<ApiMetaData firstRow={['Type', 'number']} secondRow={['Default', '10']} />
<PrismHighlight language="ts" hideLabel code={`{ dragThreshold: 10 }`} />

Drag threshold in pixels. This only affects **when** clicks are fired and not. In contrast to other carousel libraries, it will **not affect when dragging** of the carousel **starts**.

<Admonition type="note">
  **Note:** Browsers handle touch events differently than mouse events. Browsers
  won't fire the click event when a touch event includes an accidental slight
  swipe gesture. This is why this threshold only works for mouse events.
</Admonition>

---

### duration

<ApiMetaData firstRow={['Type', 'number']} secondRow={['Default', '25']} />
<PrismHighlight language="ts" hideLabel code={`{ duration: 25 }`} />

Set scroll duration when triggered by any of the API methods. Higher numbers enables slower scrolling. Drag interactions are not affected because duration is then determined by the drag force.

<Admonition type="note">
  **Note:** Duration is **not** in milliseconds because Embla uses an attraction
  physics simulation when scrolling instead of easings. Only values between
  `20`-`60` are recommended.
</Admonition>

---

### focus

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'true']} />
<PrismHighlight language="ts" hideLabel code={`{ focus: true | false }`} />

Embla automatically watches the slides for focus events. The default callback fires the [`slidefocus`](/docs/api/events/#slidefocus) event and scrolls to the focused element. Set this to `false` to disable this behaviour.

---

### inViewThreshold

<ApiMetaData
  firstRow={['Type', 'IntersectionObserverInit.threshold']}
  secondRow={['Default', '0']}
/>
<PrismHighlight language="ts" hideLabel code={`{ inViewThreshold: 0 }`} />

This is the Intersection Observer [threshold](https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API#creating_an_intersection_observer) option that will be applied to all slides.

---

### inViewMargin

<ApiMetaData
  firstRow={['Type', 'IntersectionObserverInit.rootMargin']}
  secondRow={['Default', '0px']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ inViewMargin: '0px -10px 0px 0px' }`}
/>

Sets the Intersection Observer's [rootMargin](https://developer.mozilla.org/en-US/docs/Web/API/IntersectionObserver/IntersectionObserver#rootmargin) value, which is applied to **all slides**.

<Admonition type="note">
  **Note:** When `loop` is enabled, expanding the observer's rectangle with
  `rootMargin` may not behave as expected for some slides because their
  positions shift to create the looping effect. This option is primarily
  intended to **offset padding-based spacing** between slides, as shown in the
  [Slide Gaps](/docs/guides/slide-gaps/#in-view-configuration) guide.
</Admonition>

---

### loop

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'false']} />
<PrismHighlight language="ts" hideLabel code={`{ loop: true | false }`} />

Enables **infinite looping**. Embla will apply `translateX` or `translateY` to the slides that need to change position in order to create the loop effect.

<Admonition type="note">
  Embla automatically falls back to `false` if slide content isn't enough to
  create the loop effect without visible glitches.
</Admonition>

---

### resize

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'true']} />
<PrismHighlight language="ts" hideLabel code={`{ resize: true | false }`} />

Embla automatically watches the container and slides for size changes and runs [`reInit`](/docs/api/methods/#reinit) when any size has changed. Set this to `false` to disable this behaviour.

---

### skipSnaps

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'false']} />
<PrismHighlight language="ts" hideLabel code={`{ skipSnaps: true | false }`} />

Allow the carousel to skip scroll snaps if it's dragged vigorously. Note that this option will be ignored if the [`dragFree`](#dragfree) option is set to `true`.

---

### slideChanges

<ApiMetaData firstRow={['Type', 'boolean']} secondRow={['Default', 'true']} />
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ slideChanges: true | false }`}
/>

Embla automatically watches the container for **added** and/or **removed** slides and runs [`reInit`](/docs/api/methods/#reinit) if needed. Set this to `false` to disable this behaviour.

---

### slides

<ApiMetaData
  firstRow={['Type', 'string | HTMLElement[] | NodeListOf<HTMLElement> | null']}
  secondRow={['Default', 'null']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ slides: '.embla__slide' | Array.from(document.querySelectorAll('.embla__slide')) }`}
/>

Enables using custom slide elements. By **default**, Embla will choose **all direct child elements** of its container. Provide either a valid `CSS selector string` or a `nodeList/array` containing `HTML elements`.

<Admonition type="note">
  **Note:** Even though it's possible to provide custom slide elements, they
  still have to be **direct descendants** of the carousel container.
</Admonition>

<Admonition type="warning">
  **Warning:** If you place elements inside the carousel container that aren't
  slides, they either shouldn't have any size, or should be detached from the
  document flow with `position: absolute` or similar.
</Admonition>

---

### slidesToScroll

<ApiMetaData
  firstRow={['Type', 'string | number']}
  secondRow={['Default', '1']}
/>
<PrismHighlight
  language="ts"
  hideLabel
  code={`{ slidesToScroll: 1 | 2 | 'auto' }`}
/>

Specifies how many slides advance per navigation action (buttons, dots, or drag).

- **Number** — scrolls a fixed number of slides (e.g. `2` → two slides per move).
- **`auto`** — scrolls the number of slides currently visible in the viewport.

With variable-width slides and `auto`, the group size updates dynamically based on the slides that fit within the viewport.

---

### ssr

<ApiMetaData firstRow={['Type', 'number[]']} secondRow={['Default', '[]']} />
<PrismHighlight language="ts" hideLabel code={`{ ssr: [80, 80, 80, 40] }`} />

Defines slide sizes (as percentages) for server-side rendering (SSR), allowing Embla to calculate scroll snaps without client-side measurements.
Each value corresponds to a slide's size in order — percentage of viewport **width** for horizontal carousels, or **height** for vertical ones.

---

### startSnap

<ApiMetaData firstRow={['Type', 'number']} secondRow={['Default', '0']} />
<PrismHighlight language="ts" hideLabel code={`{ startSnap: 0 }`} />

Set the initial scroll snap to the given number. First snap index starts at `0`. Please note that this is not necessarily equal to the number of slides when used together with the [`slidesToScroll`](#slidestoscroll) option.

---
